# dockhand-plugin

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  dockhand.config.example.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: dh-deploy-validator.md  dh-incident-responder.md
commands/: dh-apps.md  dh-backup.md  dh-bootstrap.md  dh-cleanup.md  dh-deploy.md  dh-dns.md  dh-logs.md  dh-maintenance.md  dh-report.md  dh-setup.md  dh-status.md  dh-templates.md  dh-terraform.md  dh-troubleshoot.md  dh-updates.md
hooks/: hooks.json  pretooluse-policy.js  session-start.sh
skills/dh-apps/: SKILL.md
skills/dh-deploy/: SKILL.md
skills/dh-first-run/: SKILL.md
skills/dh-guardrails/: SKILL.md
skills/dh-infra/: SKILL.md
skills/dh-status/: SKILL.md
skills/dh-troubleshoot/: SKILL.md
src/dockhand_plugin/: __init__.py  server.py
